[tool.poetry]
name = "password_hashing_python"
version = "0.1.0"
description = ""
authors = ["shingtoli <shingto.li@sestorobotics.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymongo = "^3.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
